# cmc_zarr_tools

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: neuroglancer_ngff_zarr_notebook.ipynb  nii2zarr_example.sh  psoct_3d_stack_creation.ipynb
scripts/: create_3d_zarr.py  resample_to_ref.py
