[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc_zarr_tools"
version = "0.1.0"
description = "Repository to convert CMCmultimodal data (PSOCT, DTI) from NIfTI to OME-Zarr and visualise them with Neuroglancer"
authors = [
    { name = "Vasilis Karlaftis", email = "vasilis.karlaftis@ndcn.ox.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    #"ngff-zarr",
    #"neuroglancer",
    "neuroglancer @ git+https://github.com/fcollman/neuroglancer.git@NIFTI_float64",
    "nifti-zarr",
    #"nifti-zarr @ git+https://github.com/neuroscales/nifti-zarr-py",
    #"ngtools",
    "ngtools @ git+https://github.com/neuroscales/ngtools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "ipykernel",
    "jupyter"
]

[tool.setuptools]
packages = ["visualize_zarr_ng"]

[tool.setuptools.package-dir]
visualize_zarr_ng = "visualize_zarr_ng"

[project.urls]
Homepage = "https://github.com/VKarlaftis/cmc_zarr_tools"
